# tgutil

./: pyproject.toml  requirements.txt  setup.py
org/: generate_texts.org
test/: test_evaluation_metrics.py  test_prompter_wrapper.py
tgutil/: configs.py  context_loader.py  evaluation_metrics.py  prompting.py  prompting_runner.py  prompting_utils.py  type_utils.py  utils.py
tgutil/evaluation/: evaluators.py  preprocessing.py
tgutil/evaluation_metrics/: __init__.py  base.py  hf_metrics.py  other_metrics.py  string_metrics.py  vector_based_metrics.py
